GNOME Bugzilla – Bug 709350
OSD layout broken
Last modified: 2013-10-04 07:55:48 UTC
When I bring up the keybinding overlay on my dualhead setup, all the text labels are drawn in the top left corner and no buttons are shown. This is control-center-3.10.0-1.fc20
Hey Jakub, Do you have a screenshot of that?
Created attachment 256449 [details] [review] wacom: Make OSD work again The recent lirsvg security changes made the include portion of the SVG used for the OSD fail to parse. Set the base URI for the layouts before loading the SVG data to fix the new strict loading policy (#691708).
Wasn't related to dual-head at all but to recent librsvg changes. Fixed in gnome-3-8 as well.