wacom: Make OSD work again

The recent lirsvg security changes made the include portion of the
SVG used for the OSD fail to parse.

Set the base URI for the layouts before loading the SVG data to
fix the new strict loading policy (#691708).

https://bugzilla.gnome.org/show_bug.cgi?id=709350

Conflicts:
	plugins/wacom/gsd-wacom-osd-window.c